Fixes / Visibily of markers

--- a/scripts/L.Control.BottomMenu.css
+++ b/scripts/L.Control.BottomMenu.css
@@ -167,7 +167,7 @@
    overflow-y: scroll;
 }
 
-::-webkit-scrollbar { 
+.leaflet-bottommenu-contents::-webkit-scrollbar { 
     display: none; 
 }
 
